--- a/style.css
+++ b/style.css
@@ -50,7 +50,22 @@ header button{
      padding: 0;
 }
 .fav-meals li {
+    position: relative;
+    margin: 5px;
     width: 80px;
+}
+.fav-meals li .clear {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    top: -0.5rem;
+    left: -0.5rem;
+    font-size: 1.2rem;
+}
+.fav-meals li:hover .clear {
+    opacity: 1;
 }
 .fav-meals li img {
     border: 2px solid #ffffff;
@@ -61,8 +76,14 @@ header button{
     height: 70px;
 }
 .fav-meals li span {
+    display: inline-block;
     font-size: 0.9rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 75px;
 }
+
 .meal {
     border-radius: 3px;
     box-shadow: 0 0 5px #3333331a;
